@@ -1,3 +1,9 @@
+2005-02-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* pa.c (pa_assemble_integer, get_plabel): Small cleanups.
+	(pa_asm_output_mi_thunk): Use asm_output_insn instead of fprintf.
+	* som.h (ASM_OUTPUT_EXTERNAL_LIBCALL): Small cleanup.
+
 2005-02-20  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 18785
